AD-2003-12-17-0: Enhancem.: Added new timed event module
                 Changed:   qmaster
                 Reviewed:  AH

JG-2003-12-17-0: Bugfix:    Fixed make pe template.

MD-2003-12-17-0: Enhancem.: Added option (-log) to infotext
                 Changed:   infotext.c
                 Reviewed:  CR

JG-2003-12-16-0: Testsuite: Made testsuite installation work with cluster queues.

EB-2003-12-16-0: Bugfix:    fixed bugs
                 * fixed invalid event handling 

                 Changed:   sge_schedd, sge_qmaster

SG-2003-12-15-0: Enhancem.: Added the use of job_names or patterns instead
                            of job_ids
                 Changed:   qmaster, qsub, qalter, qstat, qacct, qrsh, qlogin
                            qmod, gresub, qhold, man-pages

EB-2003-12-15-1: Bugfix:    fixed bugs
                 * "qconf -aq test" without modification caused error message
                 * no output concerning complex entries during master startup
                 * added new cqueue related funtions for qmon

JG-2003-12-15-0: Bugfix:    Fixed build for solaris86.

EB-2003-12-15-0: Bugfix:    removed unused messages   

EB-2003-12-13-0: Enhancem.: Cluster Queue (merged from CQ_BRANCH)
                 Changed:   all

                 All changes applied to the CQ_BRANCH have been merged to
                 MAINTRUNC. This also means that (nearly) all work packeges 
                 for the second milestone of CQs have been realized. 

                 Following part are still missing. They will be done till
                 mid/end of january:
         
                 *   "qconf -cq" does not work anymore
                 *   "qconf -explain E" does not show result for queues
                     error state
                 *   "\" can't be used as continuation character until now
                 *   qacct has not been changed accordingly
                 *   help output for all commands has not been changed
                 *   GUI