@@ -463,18 +463,12 @@ proc cleanup_system { } {
   }
 
    # remove all queues
-  puts $CHECK_OUTPUT "\nremoving queues ..."
-  set NO_QUEUE_DEFINED [translate $ts_config(master_host) 1 0 0 [sge_macro MSG_QCONF_NOXDEFINED_S] "queue"]
-
-  catch { exec "$ts_config(product_root)/bin/$CHECK_ARCH/qconf" "-sql" } result
-  if { [string first $NO_QUEUE_DEFINED $result] >= 0 } {
-     puts $CHECK_OUTPUT "no queue defined"
-  } else {
-     foreach elem $result {
-        puts $CHECK_OUTPUT "removing queue $elem."
-        del_queue $elem 
-     }
-  }
+   puts $CHECK_OUTPUT "\nremoving queues ..."
+   set queue_list [get_queue_list]
+   foreach elem $queue_list {
+      puts $CHECK_OUTPUT "removing queue $elem."
+      del_queue $elem 
+   }
 
    # add new testsuite queues
   puts $CHECK_OUTPUT "\nadding testsuite queues ..."
